[package]
name = 'fozziejoin'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = ['staticlib', 'lib']
name = 'fozziejoin'

[dependencies]
extendr-api = "0.8.0"
itertools = "0.14.0"
rapidfuzz = "0.5.0"
rayon = "1.10.0"
rustc-hash = "2.1.1"
textdistance = "1.1.1"
